--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "eyna",
-	"version": "0.0.1",
+	"version": "0.0.2",
 	"license": "MIT",
 	"private": true,
 	"main": "./app/browser.js",
@@ -12,7 +12,7 @@
 		"electron": "15.1.2",
 		"electron-builder": "22.14.4",
 		"electron-rebuild": "3.2.3",
-		"esbuild": "0.13.6",
+		"esbuild": "0.13.8",
 		"lodash": "4.17.21",
 		"lodash-es": "4.17.21",
 		"node-abi": "3.2.0",
@@ -31,8 +31,8 @@
 		"asar": false,
 		"files": [
 			"./app/**/*",
-			"./extension/*.js",
-			"./config/*.json"
+			"./config/*.json",
+			"./extension/*.js"
 		],
 		"mac": {
 			"identity": null
