--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"esbuild": "0.14.38",
 		"lodash": "4.17.21",
 		"lodash-es": "4.17.21",
+		"monaco-editor": "0.33.0",
 		"pug": "3.0.2",
 		"sass": "1.51.0",
 		"typescript": "4.6.3",
