--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"electron-builder": "23.0.3",
 		"electron-rebuild": "3.2.7",
 		"esbuild": "0.14.38",
+		"fs-extra": "10.1.0",
 		"lodash": "4.17.21",
 		"lodash-es": "4.17.21",
 		"monaco-editor": "0.33.0",
