--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
 		"lodash-es": "4.17.21",
 		"monaco-editor": "0.33.0",
 		"pug": "3.0.2",
-		"sass": "1.51.0",
+		"stylus": "0.57.0",
 		"typescript": "4.6.4",
 		"vue": "3.2.33"
 	},
