--- a/tsconfig.json
+++ b/tsconfig.json
@@ -55,23 +55,11 @@
 				"./node_modules/vue/dist/vue.d.ts",
 				"./node_modules/vue/dist/vue.runtime.esm-bundler.js",
 			],
-			"@app/*": [
-				"./src/app/*"
+			"@/*": [
+				"./src/*"
 			],
 			"@module/*": [
 				"./module/*"
-			],
-			"@bridge/*": [
-				"./src/bridge/*"
-			],
-			"@browser/*": [
-				"./src/browser/*"
-			],
-			"@renderer/*": [
-				"./src/renderer/*"
-			],
-			"@util/*": [
-				"./src/util/*"
 			]
 		},
 	}
