--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,10 +24,14 @@ jobs:
           node-version: '16'
       - name: install
         run: npm ci
-      - name: build
-        run: npm run b
-      - name: package
-        run: npm run p
+      - name: build (x64)
+        run: npm run b -- x64
+      - name: package (x64)
+        run: npm run p -- x64
+      - name: build (arm64)
+        run: npm run b -- arm64
+      - name: package (arm64)
+        run: npm run p -- arm64
       - name: upload-artifact
         uses: actions/upload-artifact@v3
         with:
