--- a/extension/tsconfig.json
+++ b/extension/tsconfig.json
@@ -1,19 +1,8 @@
 // https://www.typescriptlang.org/tsconfig
 // https://github.com/microsoft/TypeScript/blob/main/src/compiler/commandLineParser.ts
 {
-	"files": [
-		"src/extension.d.ts",
-
-		"src/fs.copy.ts",
-		"src/fs.duplicate.ts",
-		"src/fs.mkdir.ts",
-		"src/fs.move.ts",
-		"src/fs.rename.ts",
-		"src/fs.trash.ts",
-
-		"src/list.code.ts",
-		"src/list.terminal.ts",
-		"src/list.test.ts",
+	"include": [
+		"src/*",
 	],
 
 	"compilerOptions": {
@@ -28,10 +17,6 @@
 		// Diagnostics.Emit
 		"removeComments": true,
 		"newLine": "LF",
-
-		// Basic
-		// Diagnostics.Specify_an_output_folder_for_all_emitted_files
-		"outDir": ".",
 
 		// Strict Type Checks
 		// Diagnostics.Type_Checking
@@ -51,7 +36,7 @@
 		"exactOptionalPropertyTypes": true,
 		"noImplicitReturns": true,
 		"noFallthroughCasesInSwitch": true,
-		// "noUncheckedIndexedAccess": true,
+		"noUncheckedIndexedAccess": true,
 		"noImplicitOverride": true,
 		"noPropertyAccessFromIndexSignature": true,
 
