--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -12,13 +12,10 @@ jobs:
       fail-fast: false
       matrix:
         os: [windows-latest, macos-latest]
-        language: [javascript, cpp]
-
     permissions:
       actions: read
       contents: read
       security-events: write
-
     steps: 
       - name: checkout
         uses: actions/checkout@v3
@@ -30,6 +27,8 @@ jobs:
         run: npm ci
       - name: codeql init
         uses: github/codeql-action/init@v2
+        with:
+          languages: javascript, cpp
       - name: build (x64)
         run: npm run b -- x64
       - name: codeql analyze
