--- a/pkg/native/package.json
+++ b/pkg/native/package.json
@@ -6,6 +6,7 @@
 	},
 	"scripts": {
 		"install": "node install.js",
+		"rebuild": "node-gyp rebuild",
 		"ide:win": "node-gyp configure",
 		"ide:mac": "node-gyp configure -- -f xcode"
 	}
