コマンド修正

--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -11,7 +11,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [windows-latest, macos-latest]
+        os: [macos-latest]
         arch: [x64]
     permissions:
       actions: read
@@ -38,10 +38,10 @@ jobs:
       - name: codeql database create
         run: |
           mkdir -p .codeql/db
-          codeql database create --threads=0 --language=javascript --source-root=.                -- .codeql/db/javascript
-          codeql database create --threads=0 --language=cpp        --source-root=pkg/native/build -- .codeql/db/cpp
+          $CODEQL_DIST database create --threads=0 --language=javascript --source-root=.                -- .codeql/db/javascript
+          $CODEQL_DIST database create --threads=0 --language=cpp        --source-root=pkg/native/build -- .codeql/db/cpp
 
       - name: codeql database analyze
         run: |
-          codeql database analyze --threads=0 --format=csv --output=.codeql/analyze.javascript.csv -- .codeql/db/javascript javascript-lgtm-full.qls
-          codeql database analyze --threads=0 --format=csv --output=.codeql/analyze.cpp.csv        -- .codeql/db/cpp        cpp-lgtm-full.qls
+          $CODEQL_DIST database analyze --threads=0 --format=csv --output=.codeql/analyze.javascript.csv -- .codeql/db/javascript javascript-lgtm-full.qls
+          $CODEQL_DIST database analyze --threads=0 --format=csv --output=.codeql/analyze.cpp.csv        -- .codeql/db/cpp        cpp-lgtm-full.qls
