--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -45,5 +45,10 @@ jobs:
 
       - name: codeql database analyze
         run: |
-          $CODEQL_DIST/codeql database analyze --threads=0 --format=csv --output=.codeql/analyze.javascript.csv -- .codeql/db/javascript javascript-lgtm-full.qls
-          $CODEQL_DIST/codeql database analyze --threads=0 --format=csv --output=.codeql/analyze.cpp.csv        -- .codeql/db/cpp        cpp-lgtm-full.qls
+          $CODEQL_DIST/codeql database analyze --threads=0 --format=sarif-latest --output=.codeql/analyze.javascript.sarif -- .codeql/db/javascript javascript-lgtm-full.qls
+          $CODEQL_DIST/codeql database analyze --threads=0 --format=sarif-latest --output=.codeql/analyze.cpp.sarif        -- .codeql/db/cpp        cpp-lgtm-full.qls
+
+      - name: upload sarif
+        uses: github/codeql-action/upload-sarif@v2
+        with:
+          sarif_file: .codeql
