--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -29,12 +29,12 @@ jobs:
           node-version: '16'
       - name: install
         run: npm ci
-      - name: configure
-        run: npm run configure -w pkg/native
       - name: codeql init
         uses: github/codeql-action/init@v2
         with:
           languages: javascript, cpp
+      - name: codeql autobuild init
+        run: npm run codeql -w pkg/native
       - name: codeql database create
         run: |
           mkdir -p .codeql/db
@@ -45,7 +45,7 @@ jobs:
           mkdir -p .codeql/out
           $CODEQL_DIST/codeql database analyze --threads=0 --format=sarif-latest --output=.codeql/out/javascript.sarif -- .codeql/db/javascript javascript-lgtm-full.qls
           $CODEQL_DIST/codeql database analyze --threads=0 --format=sarif-latest --output=.codeql/out/cpp.sarif        -- .codeql/db/cpp        cpp-lgtm-full.qls
-      - name: upload sarif
+      - name: upload-sarif
         uses: github/codeql-action/upload-sarif@v2
         with:
           sarif_file: .codeql/out
