--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
 	"description": "",
 	"workspaces": [
 		"pkg/native",
-		"pkg/test"
+		"pkg/test",
+		"pkg/util"
 	],
 	"devDependencies": {
 		"@eyna/native": "*",
+		"@eyna/util": "*",
 		"electron": "19.0.7",
 		"electron-builder": "23.1.0",
 		"electron-rebuild": "3.2.7",
