--- a/package.json
+++ b/package.json
@@ -11,19 +11,18 @@
 	"devDependencies": {
 		"@eyna/native": "*",
 		"@eyna/util": "*",
-		"electron": "20.0.2",
+		"electron": "20.1.0",
 		"electron-builder": "23.3.3",
 		"electron-rebuild": "3.2.9",
-		"esbuild": "0.15.1",
+		"esbuild": "0.15.5",
 		"monaco-editor": "0.34.0",
 		"pug": "3.0.2",
-		"stylus": "0.58.1",
+		"stylus": "0.59.0",
 		"typescript": "4.7.4",
 		"vue": "3.2.37"
 	},
 	"overrides": {
-		"got": "11.8.5",
-		"css": "npm:@adobe/css-tools@4.0.1"
+		"got": "11.8.5"
 	},
 	"scripts": {
 		"b": "node scripts/b.mjs",
