--- a/package.json
+++ b/package.json
@@ -11,18 +11,19 @@
 	"devDependencies": {
 		"@eyna/native": "*",
 		"@eyna/util": "*",
-		"electron": "21.2.0",
+		"electron": "21.3.0",
 		"electron-builder": "23.6.0",
 		"electron-rebuild": "3.2.9",
-		"esbuild": "0.15.12",
+		"esbuild": "0.15.14",
 		"monaco-editor": "0.34.1",
 		"pug": "3.0.2",
 		"stylus": "0.59.0",
-		"typescript": "4.8.4",
-		"vue": "3.2.41"
+		"typescript": "4.9.3",
+		"vue": "3.2.45"
 	},
 	"overrides": {
-		"got": "11.8.5"
+		"got": "11.8.5",
+		"minimatch": "3.1.2"
 	},
 	"scripts": {
 		"b": "node scripts/b.mjs",
