--- a/package.json
+++ b/package.json
@@ -13,16 +13,13 @@
 		"@eyna/native": "*",
 		"@eyna/util": "*",
 		"electron": "22.1.0",
-		"electron-builder": "23.6.0",
+		"electron-builder": "24.0.0-alpha.11",
 		"esbuild": "0.17.4",
 		"monaco-editor": "0.34.1",
 		"pug": "3.0.2",
 		"stylus": "0.59.0",
 		"typescript": "4.9.4",
 		"vue": "3.2.45"
-	},
-	"overrides": {
-		"minimatch": "3.1.2"
 	},
 	"scripts": {
 		"b": "node scripts/b.mjs",
