--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
 		"@eyna/native": "*",
 		"@eyna/util": "*",
 		"electron": "23.0.0",
-		"electron-builder": "24.0.0-alpha.11",
-		"esbuild": "0.17.8",
-		"monaco-editor": "0.35.0",
+		"electron-builder": "24.2.0",
+		"esbuild": "0.17.16",
+		"monaco-editor": "0.37.1",
 		"pug": "3.0.2",
 		"stylus": "0.59.0",
 		"typescript": "4.9.5",
