--- a/package.json
+++ b/package.json
@@ -12,14 +12,14 @@
 		"@electron/rebuild": "3.2.13",
 		"@eyna/native": "*",
 		"@eyna/util": "*",
+		"@vue/runtime-dom": "3.3.2",
 		"electron": "24.3.0",
 		"electron-builder": "24.2.1",
 		"esbuild": "0.17.19",
 		"monaco-editor": "0.38.0",
 		"pug": "3.0.2",
 		"stylus": "0.59.0",
-		"typescript": "5.0.4",
-		"vue": "3.2.47"
+		"typescript": "5.0.4"
 	},
 	"scripts": {
 		"b": "node scripts/b.mjs",
