--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
 		"stylus": "0.59.0",
 		"typescript": "5.1.3"
 	},
+	"overrides": {
+		"semver": "7.5.3"
+	},
 	"scripts": {
 		"b": "node scripts/b.mjs",
 		"p": "node scripts/p.mjs",
