--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
 		"stylus": "0.60.0",
 		"typescript": "5.2.2"
 	},
+	"overrides": {
+		"@adobe/css-tools": "4.3.1"
+	},
 	"scripts": {
 		"b": "node scripts/b.mjs",
 		"p": "node scripts/p.mjs",
