--- a/pkg/native/package.json
+++ b/pkg/native/package.json
@@ -2,7 +2,7 @@
 	"name": "@eyna/native",
 	"private": true,
 	"devDependencies": {
-		"node-gyp": "*"
+		"node-gyp": "9"
 	},
 	"scripts": {
 		"install": "node install.js",
