Revert "node-gyp@9"
This reverts commit 5cb79de1f61a129e3041c801c22a74e495554a0f.

--- a/pkg/native/package.json
+++ b/pkg/native/package.json
@@ -2,7 +2,7 @@
 	"name": "@eyna/native",
 	"private": true,
 	"devDependencies": {
-		"node-gyp": "9"
+		"node-gyp": "*"
 	},
 	"scripts": {
 		"install": "node install.js",
