--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,7 +15,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [windows-latest, macos-11]
+        os: [windows-latest, macos-latest]
         arch: [x64, arm64]
     steps: 
       - name: checkout
@@ -23,7 +23,7 @@ jobs:
       - name: setup-node
         uses: actions/setup-node@v3
         with:
-          node-version: '18'
+          node-version: '20'
       - name: install
         run: npm ci
       - name: build
