--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,10 +24,10 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: '20'
-      - name: setup-python
-        run: sudo -H pip install setuptools
       - name: install
-        run: npm ci
+        run: |
+          pip install setuptools
+          npm ci
       - name: build
         run: npm run b -- ${{ matrix.arch }}
       - name: package
