--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,7 +26,7 @@ jobs:
           node-version: '20'
       - name: install
         run: |
-          pip install setuptools
+          pip3 install setuptools
           npm ci
       - name: build
         run: npm run b -- ${{ matrix.arch }}
