--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
 		"monaco-editor": "0.43.0",
 		"pug": "3.0.2",
 		"stylus": "0.62.0",
-		"typescript": "5.2.2"
+		"typescript": "5.3.2"
+	},
+	"overrides": {
+		"cacache": "18.0.0"
 	},
 	"scripts": {
 		"b": "node scripts/b.mjs",
