--- a/.github/workflows/build-check.yml
+++ b/.github/workflows/build-check.yml
@@ -24,7 +24,7 @@ jobs:
           node-version: '20'
       - name: install
         run: |
-          pip3 install packaging
+          pip3 install setuptools
           npm ci
       - name: build
         run: npm run b -- ${{ matrix.arch }}
