--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
 		"typescript": "5.3.3"
 	},
 	"overrides": {
-		"cacache": "18.0.1"
+		"node-gyp": "10.0.1"
 	},
 	"scripts": {
 		"b": "node scripts/b.mjs",
