--- a/package.json
+++ b/package.json
@@ -15,14 +15,14 @@
 		"@vue/runtime-dom": "3.3.11",
 		"electron": "28.0.0",
 		"electron-builder": "24.9.1",
-		"esbuild": "0.19.8",
+		"esbuild": "0.19.9",
 		"monaco-editor": "0.45.0",
 		"pug": "3.0.2",
 		"stylus": "0.62.0",
 		"typescript": "5.3.3"
 	},
 	"overrides": {
-		"cacache": "18.0.1"
+		"make-fetch-happen": "13.0.0"
 	},
 	"scripts": {
 		"b": "node scripts/b.mjs",
