--- a/pkg/native/package.json
+++ b/pkg/native/package.json
@@ -5,7 +5,7 @@
 		"node-gyp": "*"
 	},
 	"scripts": {
-		"install": "node install.js",
+		"install": "node scripts/install.mjs",
 		"ide:win": "node-gyp configure -- -f msvs",
 		"ide:mac": "node-gyp configure -- -f xcode"
 	}
