テスト移動

--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
 	"main": "./app/browser.js",
 	"workspaces": [
 		"pkg/native",
-		"pkg/test",
 		"pkg/util"
 	],
 	"devDependencies": {
@@ -15,6 +14,7 @@
 		"electron": "30.0.1",
 		"electron-builder": "24.13.3",
 		"esbuild": "0.20.2",
+		"fs-extra": "11.2.0",
 		"monaco-editor": "0.47.0",
 		"pug": "3.0.2",
 		"stylus": "0.63.0",
