--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"typescript": "5.4.5"
 	},
 	"scripts": {
+		"q": "node scripts/ql.mjs",
 		"b": "node scripts/b.mjs",
 		"p": "node scripts/p.mjs",
 		"s": "electron ./build"
