--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,14 +1,16 @@
-name: build-check
+name: release
 
 on:
   push:
     branches:
-      - develop
+      - main
 
 # https://github.com/actions/checkout
 # https://github.com/actions/setup-node
+# https://github.com/actions/upload-artifact
+# https://github.com/softprops/action-gh-release
 jobs:
-  build-check:
+  release:
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
@@ -27,3 +29,17 @@ jobs:
           npm ci
       - name: build
         run: npm run b -- ${{ matrix.arch }}
+      - name: package
+        run: npm run p -- ${{ matrix.arch }}
+      - name: upload-artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: ${{ matrix.os }}-${{ matrix.arch }}
+          path: dist/*.7z
+      - name: release
+        uses: softprops/action-gh-release@v2
+        with:
+          name: ${{ github.sha }}
+          draft: true
+          prerelease: true
+          files: dist/*.7z
