--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -40,4 +40,4 @@ jobs:
       - name: upload-sarif
         uses: github/codeql-action/upload-sarif@v3
         with:
-          sarif_file: .codeql/out
+          sarif_file: codeql
