--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,14 +16,11 @@ jobs:
         os: [windows-latest, macos-latest]
         arch: [x64, arm64]
     steps:
-      - name: checkout
-        uses: actions/checkout@v4
-      - name: setup-node
-        uses: actions/setup-node@v4
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
         with:
           node-version: "20"
-      - name: install
-        run: |
+      - run: |
           npm ci
-      - name: build
-        run: npm run b -- ${{ matrix.arch }}
+      - run: |
+          npm run b -- ${{ matrix.arch }}
