--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -14,30 +14,24 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [macos-latest]
+        os: [windows-latest, macos-latest]
         arch: [x64]
     permissions:
       actions: read
       contents: read
       security-events: write
     steps:
-      - name: checkout
-        uses: actions/checkout@v4
-      - name: setup-node
-        uses: actions/setup-node@v4
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
         with:
           node-version: "20"
-      - name: install
-        run: |
+      - run: |
           npm ci
-      - name: init
-        uses: github/codeql-action/init@v3
+      - uses: github/codeql-action/init@v3
         with:
           languages: cpp,javascript
-      - name: codeql
-        run: |
-          npm run q
-      - name: upload-sarif
-        uses: github/codeql-action/upload-sarif@v3
+      - run: |
+          npm run b -- ${{ matrix.arch }}
+      - uses: github/codeql-action/analyze@v3
         with:
-          sarif_file: codeql
+          category: ${{ matrix.os }}
