--- a/pkg/native/package.json
+++ b/pkg/native/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "@eyna/native",
 	"private": true,
-	"types": "./types/index.d.ts",
+	"types": "types/index.d.ts",
 	"devDependencies": {
 		"node-gyp": "*"
 	},
