--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
 	"name": "eyna",
 	"version": "0.0.36",
 	"private": true,
+	"main": "app/browser.cjs",
 	"workspaces": [
 		"pkg/native",
 		"pkg/util"
