--- a/tsconfig.json
+++ b/tsconfig.json
@@ -46,7 +46,7 @@
 		"allowSyntheticDefaultImports": true,
 		"esModuleInterop": true,
 		"forceConsistentCasingInFileNames": true,
-		"isolatedDeclarations": true,
+		// "isolatedDeclarations": true,
 		"isolatedModules": true,
 		"preserveSymlinks": true,
 		"verbatimModuleSyntax": true,
