--- a/pkg/native/package.json
+++ b/pkg/native/package.json
@@ -3,7 +3,7 @@
 	"private": true,
 	"types": "types/index.d.ts",
 	"devDependencies": {
-		"node-gyp": "*"
+		"node-gyp": "10.1.0"
 	},
 	"scripts": {
 		"install": "node scripts/install.mjs",
