--- a/extension/tsconfig.json
+++ b/extension/tsconfig.json
@@ -40,7 +40,7 @@
 		"allowSyntheticDefaultImports": true,
 		"esModuleInterop": true,
 		"forceConsistentCasingInFileNames": true,
-		// "isolatedDeclarations": true,
+		"isolatedDeclarations": true,
 		"isolatedModules": true,
 		"preserveSymlinks": true,
 		"verbatimModuleSyntax": true,
