--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
 	"devDependencies": {
 		"@eyna/native": "*",
 		"@eyna/util": "*",
-		"@vue/runtime-dom": "3.5.0-beta.3",
+		"@vue/runtime-dom": "3.5.0",
 		"electron": "32.0.1",
 		"electron-builder": "24.13.3",
 		"esbuild": "0.23.1",
