--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,6 +21,6 @@ jobs:
         with:
           node-version: 22
       - run: |
-          npm ci
+          npm ci --omit=optional
       - run: |
           npm run b -- ${{ matrix.arch }}
