--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -26,7 +26,7 @@ jobs:
         with:
           node-version: 22
       - run: |
-          npm ci
+          npm ci --omit=optional
       - uses: github/codeql-action/init@v3
         with:
           languages: cpp,javascript
