--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,7 +23,7 @@ jobs:
         with:
           node-version: 22
       - run: |
-          npm ci
+          npm ci --omit=optional
       - run: |
           npm run b -- ${{ matrix.arch }}
       - run: |
