--- a/extension/tsconfig.json
+++ b/extension/tsconfig.json
@@ -19,7 +19,7 @@
 		"strictNullChecks": true,
 		"strictFunctionTypes": true,
 		"strictBindCallApply": true,
-		// "strictBuiltinIteratorReturn": true,
+		"strictBuiltinIteratorReturn": true,
 		"strictPropertyInitialization": true,
 		"noImplicitThis": true,
 		"useUnknownInCatchVariables": true,
