--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,7 @@
 		"strictNullChecks": true,
 		"strictFunctionTypes": true,
 		"strictBindCallApply": true,
-		// "strictBuiltinIteratorReturn": true,
+		"strictBuiltinIteratorReturn": true,
 		"strictPropertyInitialization": true,
 		"noImplicitThis": true,
 		"useUnknownInCatchVariables": true,
