--- a/package.json
+++ b/package.json
@@ -15,14 +15,15 @@
 		"electron": "38.2.2",
 		"electron-builder": "25.1.8",
 		"esbuild": "0.25.10",
-		"monaco-editor": "0.50.0",
+		"monaco-editor": "0.54.0",
 		"pug": "3.0.3",
 		"stylus": "0.64.0",
 		"typescript": "5.9.3"
 	},
 	"overrides": {
 		"glob": "11",
-		"node-gyp": "11"
+		"node-gyp": "11",
+		"dompurify": "3.3"
 	},
 	"scripts": {
 		"q": "node scripts/ql.mjs",
