--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,8 +13,11 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [windows-latest, macos-latest]
-        arch: [x64, arm64]
+        include:
+          - os: windows-latest
+            arch: x64
+          - os: macos-latest
+            arch: arm64
     steps:
       - uses: actions/checkout@v5
       - uses: actions/setup-node@v6
