--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,8 +13,11 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [windows-latest, macos-latest]
-        arch: [x64, arm64]
+        include:
+          - os: windows-latest
+            arch: x64
+          - os: macos-latest
+            arch: arm64
     steps:
       - uses: actions/checkout@v5
       - uses: actions/setup-node@v6
@@ -23,6 +26,7 @@ jobs:
       - run: |
           npm ci --omit=optional
       - run: |
-          node scripts/test.mjs
           node pkg/native/scripts/build_node.mjs
+      - run: |
+          node scripts/test.mjs
           node pkg/native/test/test.mjs
