--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"monaco-editor": "0.54.0",
 		"pug": "3.0.3",
 		"stylus": "0.64.0",
+		"tar": "7.5.2",
 		"tsx": "4.20.6",
 		"typescript": "5.9.3"
 	},
