--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"dompurify": "3.3"
 	},
 	"scripts": {
+		"postinstall": "tsx scripts/postinstall.ts",
 		"b": "tsx scripts/build.ts",
 		"p": "tsx scripts/package.ts",
 		"s": "electron ./build"
