electronオプション

--- a/pkg/native/CMakeLists.txt
+++ b/pkg/native/CMakeLists.txt
@@ -38,6 +38,11 @@ target_compile_definitions(${PROJECT_NAME} PRIVATE
 if(NODE_RUNTIME_NAME STREQUAL "electron")
   target_compile_definitions(${PROJECT_NAME} PRIVATE
     ELECTRON_BUILD=1
+    V8_COMPRESS_POINTERS
+    V8_COMPRESS_POINTERS_IN_SHARED_CAGE
+    V8_31BIT_SMIS_ON_64BIT_ARCH
+    V8_ENABLE_SANDBOX
+    V8_EXTERNAL_CODE_SPACE
   )
 endif()
 
