--- a/pkg/native/package.json
+++ b/pkg/native/package.json
@@ -1,13 +1,5 @@
 {
 	"name": "@eyna/native",
 	"private": true,
-	"types": "types/index.d.ts",
-	"devDependencies": {
-		"node-gyp": "12.1.0"
-	},
-	"scripts": {
-		"install": "node scripts/install.ts",
-		"ide:win": "node-gyp configure -- -f msvs",
-		"ide:mac": "node-gyp configure -- -f xcode"
-	}
+	"types": "types/index.d.ts"
 }
